[gd_scene load_steps=24 format=3 uid="uid://j4lf47knpm4f"]

[ext_resource type="Script" uid="uid://b38u6bu17w4pc" path="res://scenes/boss/violence_boss.gd" id="1_l36nh"]
[ext_resource type="Texture2D" uid="uid://cql8puvmbaw5u" path="res://images/violenceboss.png" id="2_23uh7"]
[ext_resource type="Texture2D" uid="uid://dv68a1l1oiaks" path="res://images/violenceboss_weakspot.png" id="3_1vlja"]
[ext_resource type="Texture2D" uid="uid://c5oa0g0sj4kdc" path="res://images/violenceboss_blocker.png" id="3_7aq0k"]
[ext_resource type="Texture2D" uid="uid://do6uykidpfd5s" path="res://images/violenceboss_striker.png" id="4_b7804"]
[ext_resource type="Script" uid="uid://cn8ddvx10harv" path="res://scenes/boss/striker.gd" id="5_rvv8k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7aq0k"]
atlas = ExtResource("2_23uh7")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7804"]
atlas = ExtResource("2_23uh7")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vlja"]
atlas = ExtResource("2_23uh7")
region = Rect2(128, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_rvv8k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7aq0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7804")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vlja")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1vlja"]
radius = 16.0
height = 100.0

[sub_resource type="Curve2D" id="Curve2D_l36nh"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 50, -45, 0.289363, -18.7147, -0.289363, 18.7147, 14, 9, -6.34653, -12.3025, 6.34653, 12.3025, 45, 45, 0, 0, 0, 0, 13, 107)
}
point_count = 4

[sub_resource type="AtlasTexture" id="AtlasTexture_x8610"]
atlas = ExtResource("3_1vlja")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_31y1n"]
atlas = ExtResource("3_1vlja")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_lvygf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8610")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31y1n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rvv8k"]
radius = 15.0

[sub_resource type="AtlasTexture" id="AtlasTexture_rvv8k"]
atlas = ExtResource("3_7aq0k")
region = Rect2(0, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_x8610"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvv8k")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7aq0k"]
size = Vector2(13, 60)

[sub_resource type="Curve2D" id="Curve2D_23uh7"]
_data = {
"points": PackedVector2Array(6.21701, 16.0366, -6.21701, -16.0366, -74, -49, -11.33, 8.18, 0, 0, -71, -97, 0, 0, 0, 0, -33, -119)
}
point_count = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_1vlja"]
radius = 17.066

[sub_resource type="Curve2D" id="Curve2D_1vlja"]
_data = {
"points": PackedVector2Array(1.78909, 11.2813, -1.78909, -11.2813, -72.2858, 23, -44.1882, -0.418046, 44.1882, 0.418046, -16.4286, 7.04837, 10.554, -16.5369, -10.554, 16.5369, 36.1428, 36.2621, 48.7321, -6.26008, -48.7321, 6.26008, -9.85718, 65.4758, -4.19494, 21.6071, 4.19494, -21.6071, -72.2856, 23.7419)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_rvv8k"]
_data = {
"points": PackedVector2Array(1.78909, 11.2813, -1.78909, -11.2813, -72.2858, 23, -44.1882, -0.418046, 44.1882, 0.418046, -16.4286, 7.04837, 10.554, -16.5369, -10.554, 16.5369, 36.1428, 36.2621, 48.7321, -6.26008, -48.7321, 6.26008, -29.5714, 68.2581, 33.125, 17.8238, -33.125, -17.8238, -167.571, 50.1734, 0, 0, 0, 0, -249.556, -14.7554, 0, 0, 0, 0, -262.857, -30.5121)
}
point_count = 7

[node name="ViolenceBoss" type="Node2D"]
position = Vector2(500, 135)
script = ExtResource("1_l36nh")

[node name="BossBody" type="CharacterBody2D" parent="."]
collision_layer = 2
motion_mode = 1

[node name="Sprite2D" type="AnimatedSprite2D" parent="BossBody"]
sprite_frames = SubResource("SpriteFrames_rvv8k")

[node name="BodyCollision" type="CollisionShape2D" parent="BossBody"]
position = Vector2(3, -11)
shape = SubResource("CapsuleShape2D_1vlja")

[node name="BodyPath" type="Path2D" parent="BossBody"]
position = Vector2(-12, -8)
curve = SubResource("Curve2D_l36nh")

[node name="BodyPathFollower" type="PathFollow2D" parent="BossBody/BodyPath"]
position = Vector2(50, -45)
rotation = 2.1588
rotates = false

[node name="WeakPoint" type="CharacterBody2D" parent="BossBody"]
position = Vector2(-11, -34)
collision_layer = 2
motion_mode = 1

[node name="Sprite2D" type="AnimatedSprite2D" parent="BossBody/WeakPoint"]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_lvygf")

[node name="WeakPointCollision" type="CollisionShape2D" parent="BossBody/WeakPoint"]
shape = SubResource("CircleShape2D_rvv8k")

[node name="Blocker" type="CharacterBody2D" parent="BossBody"]
position = Vector2(-49, -37)
collision_layer = 2
motion_mode = 1

[node name="Sprite2D" type="AnimatedSprite2D" parent="BossBody/Blocker"]
sprite_frames = SubResource("SpriteFrames_x8610")

[node name="BlockerCollision" type="CollisionShape2D" parent="BossBody/Blocker"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_7aq0k")

[node name="BlockerPath" type="Path2D" parent="BossBody/Blocker"]
position = Vector2(75, 51)
curve = SubResource("Curve2D_23uh7")

[node name="BlockerPathFollower" type="PathFollow2D" parent="BossBody/Blocker/BlockerPath"]
position = Vector2(-74, -49)
rotation = -1.94063
rotates = false

[node name="Striker" type="CharacterBody2D" parent="BossBody"]
position = Vector2(-56, -3)
collision_layer = 2
motion_mode = 1
script = ExtResource("5_rvv8k")

[node name="Sprite2D" type="Sprite2D" parent="BossBody/Striker"]
texture = ExtResource("4_b7804")

[node name="StrikerCollision" type="CollisionShape2D" parent="BossBody/Striker"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_1vlja")

[node name="StrikerIdlePath" type="Path2D" parent="BossBody/Striker"]
position = Vector2(44, -15.0667)
scale = Vector2(0.304348, 0.718841)
curve = SubResource("Curve2D_1vlja")

[node name="Follower" type="PathFollow2D" parent="BossBody/Striker/StrikerIdlePath"]
position = Vector2(-72.2858, 23)
rotation = -1.72808
loop = false

[node name="StrikerStrikePath" type="Path2D" parent="BossBody/Striker"]
position = Vector2(44, -15.0667)
scale = Vector2(0.304348, 0.718841)
curve = SubResource("Curve2D_rvv8k")

[node name="Follower" type="PathFollow2D" parent="BossBody/Striker/StrikerStrikePath"]
position = Vector2(-72.2858, 23)
rotation = -1.72808
loop = false

[node name="Striker2" type="CharacterBody2D" parent="BossBody"]
z_index = -10
position = Vector2(-32, -35)
collision_layer = 2
motion_mode = 1
script = ExtResource("5_rvv8k")
striker_progress = 0.5

[node name="Sprite2D" type="Sprite2D" parent="BossBody/Striker2"]
texture = ExtResource("4_b7804")

[node name="StrikerCollision" type="CollisionShape2D" parent="BossBody/Striker2"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_1vlja")

[node name="StrikerIdlePath" type="Path2D" parent="BossBody/Striker2"]
position = Vector2(44, -15.0667)
scale = Vector2(0.304348, 0.718841)
curve = SubResource("Curve2D_1vlja")

[node name="Follower" type="PathFollow2D" parent="BossBody/Striker2/StrikerIdlePath"]
position = Vector2(-72.2858, 23)
rotation = -1.72808
loop = false

[node name="StrikerStrikePath" type="Path2D" parent="BossBody/Striker2"]
position = Vector2(44, -15.0667)
scale = Vector2(0.304348, 0.718841)
curve = SubResource("Curve2D_rvv8k")

[node name="Follower" type="PathFollow2D" parent="BossBody/Striker2/StrikerStrikePath"]
position = Vector2(-72.2858, 23)
rotation = -1.72808
loop = false
